# AlphaPeptFast

./: .gitignore  CHANGELOG_XIC_SMOOTHING.md  CONTRIBUTING.md  DATABASE_GENERATION_IMPLEMENTATION.md  FEATURES_MODULE_SUMMARY.md  FUTURE_IMPROVEMENTS.md  GITHUB_WORKFLOW.md  INVESTIGATION_COMPLETE.md  LIBRARY_STATUS.md  LICENSE  MASS_RECALIBRATION_TODO.md  PHASE2_PROGRESS.md  PROTEINFIRST_QUICK_REFERENCE.md  PROTEINFIRST_RECONSTRUCTION_GUIDE.md  README.md  README_PROTEINFIRST_INTEGRATION.md  SESSION_STATUS.md  VALIDATION_COMPLETE.md  pyproject.toml  test_smoothing.py
alphapeptfast/: __init__.py  constants.py  convenience.py  modifications.py
alphapeptfast/calibration/: __init__.py  kernels.py
alphapeptfast/database/: __init__.py  cached_index.py  decoys.py  digestion.py  fasta_reader.py  peptide_db.py
alphapeptfast/features/: __init__.py  charge_consolidation.py  feature_finding.py  isotope_grouping.py  quality_scoring.py
alphapeptfast/fragments/: __init__.py  generator.py
alphapeptfast/rt/: __init__.py  calibration.py
alphapeptfast/scoring/: __init__.py  fdr.py  hyperscore.py  intensity_scoring.py  isotope_scoring.py  mass_recalibration.py  peak_grouping.py  proteinfirst_intensity_adapter.py  rf_rescoring.py
alphapeptfast/search/: __init__.py  candidate_matching.py  fragment_index.py  fragment_matching.py
alphapeptfast/xic/: __init__.py  centroiding.py  extraction.py  q1_extraction.py  smoothing.py
docs/: EXTRACTION_v0.2_FROM_PROTEINFIRST.md  MASS_CALCULATIONS.md  centroiding.md  feature_finding.md  v0.2_DESIGN.md
scripts/: augment_training_data.py  train_baseline_rf.py  validate_proteinfirst_features.py
tests/: __init__.py  conftest.py  test_flat_storage.py  test_placeholder.py
tests/test_data/: raw_profile_sample.hdf
tests/unit_tests/: __init__.py  (+21 more)
