[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphapeptfast"
version = "0.1.0"
description = "High-performance proteomics computing library for mass spectrometry"
authors = [
    {name = "Matthias Mann with Claude Code (Anthropic)"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["proteomics", "mass-spectrometry", "bioinformatics", "numba", "performance"]

dependencies = [
    "numpy>=1.24.0",
    "numba>=0.58.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mannlab/AlphaPeptFast"
Repository = "https://github.com/mannlab/AlphaPeptFast"
Documentation = "https://github.com/mannlab/AlphaPeptFast#readme"
"Bug Tracker" = "https://github.com/mannlab/AlphaPeptFast/issues"

[tool.setuptools]
packages = ["alphapeptfast"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=alphapeptfast --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by black)
